--- a/05 - Flex Panel Gallery/index-START.html
+++ b/05 - Flex Panel Gallery/index-START.html
@@ -44,10 +44,8 @@
       background-position:center;
       flex: 1;
       justify-content: center;
-      align-items: center;
       display: flex;
       flex-direction: column;
-
     }
 
 
@@ -57,31 +55,21 @@
     .panel4 { background-image:url(https://source.unsplash.com/ITjiVXcwVng/1500x1500); }
     .panel5 { background-image:url(https://source.unsplash.com/3MNzGlQM7qs/1500x1500); }
 
+    /* Flex Items */
     .panel > * {
       margin:0;
       width: 100%;
       transition:transform 0.5s;
       flex: 1 0 auto;
-      display: flex;
+      display:flex;
       justify-content: center;
       align-items: center;
     }
 
-    .panel > *:first-child {
-      transform: translateY(-100%);
-    }
-
-    .panel.open-active > *:first-child {
-      transform: translateY(0%);
-    }
-
-    .panel > *:last-child {
-      transform: translateY(100%);
-    }
-
-    .panel.open-active > *:last-child {
-      transform: translateY(0%);
-    }
+    .panel > *:first-child { transform: translateY(-100%); }
+    .panel.open-active > *:first-child { transform: translateY(0); }
+    .panel > *:last-child { transform: translateY(100%); }
+    .panel.open-active > *:last-child { transform: translateY(0); }
 
     .panel p {
       text-transform: uppercase;
@@ -94,8 +82,8 @@
     }
 
     .panel.open {
-      font-size:40px;
       flex: 5;
+      font-size:40px;
     }
 
     .cta {
@@ -135,28 +123,23 @@
   </div>
 
   <script>
-  const panels = document.querySelectorAll('.panels');
+    const panels = document.querySelectorAll('.panel');
 
-  function toggleOpen(e) {
+    function toggleOpen() {
+      console.log('Hello');
+      this.classList.toggle('open');
+    }
 
-  console.log(e.propertyName);
-    // console.log(this);
-    this.classList.toggle('open');
-  }
+    function toggleActive(e) {
+      console.log(e.propertyName);
+      if (e.propertyName.includes('flex')) {
+        this.classList.toggle('open-active');
+      }
+    }
 
-  function toggleActive(e) {
-    // this.classList.toggle('open-active');
-    if(e.propertyName.includes("flex") {
-      this.classList.toggle('open-active');
-    });
-  }
-
-  panels.forEach(panel => panel.addEventListener('click', toggleOpen));
-  panels.forEach(panel => panel.addEventListener('transitioned', toggleActive))
-
+    panels.forEach(panel => panel.addEventListener('click', toggleOpen));
+    panels.forEach(panel => panel.addEventListener('transitionend', toggleActive));
   </script>
-
-
 
 </body>
 </html>
