continuing coding practice

--- a/10 - Hold Shift and Check Checkboxes/index-START.html
+++ b/10 - Hold Shift and Check Checkboxes/index-START.html
@@ -109,7 +109,32 @@
   console.log(checkboxes);
 
   function handleCheck(e) {
-    
+
+  }
+
+  checkboxes.forEach(checkbox => {
+    checkbox.addEventListener('click', handleCheck);
+  });
+  // create function to select specific input clicked
+
+  function selectAll (e) {
+    console.log(e);
+
+  //while the mouse is down
+
+  };
+
+
+  //Select all inputs on mousedown
+
+
+  input.addEventListener("mousedown", selectAll);
+
+  const checkboxes  = document.querySelectorAll('.inbox input[type="checkbox"]');
+  console.log(checkboxes);
+
+  function handleCheck(e) {
+
   }
 
   checkboxes.forEach(checkbox => {
