--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -26,6 +26,7 @@
     }
 
     body {
+      margin: 0;
       font-size: 2rem;
       display:flex;
       flex:1;
@@ -61,47 +62,11 @@
       background:black;
       position: absolute;
       top:50%;
-      transform-origin: 100%;
-      transform: rotate(90deg);
-      transition: all 0.05s;
-      transition-timing-function: ease-in-out;
     }
 
   </style>
 
   <script>
-
-  const secondHand = document.querySelector(".second-hand");
-  const minHand = document.querySelector(".min-hand");
-  const hourHand = document.querySelector(".hour-hand");
-
-
-
-  function setDate() {
-    const now = new Date();
-    const seconds = now.getSeconds();
-    const minutes = now.getMinutes();
-    const hours = now.getHours();
-
-
-
-    const degreesSeconds = ((seconds / 60) * 360) + 90;
-    secondHand.style.transform = `rotate(${degreesSeconds}deg)`;
-
-    const degreesMinutes = ((minutes / 60) * 360) + 90;
-    minHand.style.transform = `rotate(${degreesMinutes}deg)`;
-
-    const degreesHours = ((hours / 12) * 360) + 90;
-    hourHand.style.transform = `rotate(${degreesHours}deg)`;
-
-
-    console.log(now)
-
-  };
-
-  setInterval(setDate, 1000)
-
-
 
 
   </script>
