--- a/10 - Hold Shift and Check Checkboxes/index-START.html
+++ b/10 - Hold Shift and Check Checkboxes/index-START.html
@@ -100,50 +100,61 @@
 
 <script>
 
-// //Create variable for all inputs
-// const inputs = Array.from(document.querySelectorAll("input"));
+// const checkboxes = document.querySelectorAll('.inbox input[type="checkbox"]');
 //
-// //Create function for shift key pressed
+// let lastChecked;
 //
-// function shiftPressed (x) {
-//   console.log("shift pressed");
-// };
+// function handleCheck(e) {
+//   // Check if they had the shift key down
+//   // AND check that they are checking it
+//   let inBetween = false;
+//   if (e.shiftKey && this.checked) {
+//     // go ahead and do what we please
+//     // loop over every single checkbox
+//     checkboxes.forEach(checkbox => {
+//       console.log(checkbox);
+//       if (checkbox === this || checkbox === lastChecked) {
+//         inBetween = !inBetween;
+//         console.log('STarting to check them inbetween!');
+//       }
 //
-// //Create checkbox clicked function
+//       if (inBetween) {
+//         checkbox.checked = true;
+//       }
+//     });
+//   }
 //
-// function checkBoxClicked() {
-//   const clickedBox = this;
+//   lastChecked = this;
+// }
 //
-//   window.addEventListener("shiftKey", shiftPressed(clickedBox))
-// };
-//
-// //loop through all the checkboxes
-// inputs.forEach(input => {
-//
-//   //Add event listener for clicking the checkbox
-//   input.addEventListener("click", checkBoxClicked)
-// });
-//
-// window.addEventListener("shiftKey", function() {
-//   console.log("hahahahha")
-// });
-//   //Save marked checkbox (this) in a variable
-//
-//     //Call a function for calculating any other input checkboxes which boxes between the originally checked box and where the mouse currently is
-//
-//     //Save input boxes calulcated in a variable
-//
-//     //Add event listener for listening to the release of the shift key
-//
-//       //Call function activating the click of inputs above (pass in the inputs variable as a parameter)
-//
-// //
+// checkboxes.forEach(checkbox => checkbox.addEventListener('click', handleCheck));
 
 const checkBoxes = document.querySelectorAll('.inbox input[type="checkbox"]');
+console.log(checkBoxes);
 
-function handleCheck(e) {
-  console.log(e);
-};
+let lastChecked;
+
+function handleCheck (e) {
+
+  let inBetween = false;
+
+  if (e.shiftKey && this.checked) {
+
+    checkBoxes.forEach(checkBox => {console.log(checkBox)
+    if (checkBox === this || checkBox === lastChecked) {
+      inBetween = !inBetween;
+      console.log(inBetween);
+    }
+
+    if (inBetween) { //While inBetween is true, any checkBoxes that are looped over should be checked
+      checkBox.checked = true;
+    }
+  });
+}
+
+
+  lastChecked = this;
+}
 
 checkBoxes.forEach(checkBox => checkBox.addEventListener("click", handleCheck));
 
