--- a/10 - Hold Shift and Check Checkboxes/index-START.html
+++ b/10 - Hold Shift and Check Checkboxes/index-START.html
@@ -100,63 +100,38 @@
 
 <script>
 
-// const checkboxes = document.querySelectorAll('.inbox input[type="checkbox"]');
-//
-// let lastChecked;
-//
-// function handleCheck(e) {
-//   // Check if they had the shift key down
-//   // AND check that they are checking it
-//   let inBetween = false;
-//   if (e.shiftKey && this.checked) {
-//     // go ahead and do what we please
-//     // loop over every single checkbox
-//     checkboxes.forEach(checkbox => {
-//       console.log(checkbox);
-//       if (checkbox === this || checkbox === lastChecked) {
-//         inBetween = !inBetween;
-//         console.log('STarting to check them inbetween!');
-//       }
-//
-//       if (inBetween) {
-//         checkbox.checked = true;
-//       }
-//     });
-//   }
-//
-//   lastChecked = this;
-// }
-//
-// checkboxes.forEach(checkbox => checkbox.addEventListener('click', handleCheck));
-
-const checkBoxes = document.querySelectorAll('.inbox input[type="checkbox"]');
-console.log(checkBoxes);
+const checkboxes = document.querySelectorAll('.inbox input[type="checkbox"]');
 
 let lastChecked;
 
-function handleCheck (e) {
-
+function handleCheck(e) {
+  // Check if they had the shift key down
+  // AND check that they are checking it
   let inBetween = false;
-
   if (e.shiftKey && this.checked) {
+    // go ahead and do what we please
+    // loop over every single checkbox
 
-    checkBoxes.forEach(checkBox => {console.log(checkBox)
-    if (checkBox === this || checkBox === lastChecked) {
-      inBetween = !inBetween;
-      console.log(inBetween);
-    }
+    checkboxes.forEach(checkbox => {
+      console.log(checkbox);
+      if (checkbox === this || checkbox === lastChecked) {
+        inBetween = !inBetween;
+        console.log('STarting to check them inbetween!');
+      }
 
-    if (inBetween) { //While inBetween is true, any checkBoxes that are looped over should be checked
-      checkBox.checked = true;
-    }
-  });
+      if (inBetween) {
+        checkbox.checked = true;
+      }
+    });
+  }
+
+  lastChecked = this; //Put in a more global scope than next loop so it can be accessed in the next if statement within an if statement
 }
 
+checkboxes.forEach(checkbox => checkbox.addEventListener('click', handleCheck));
 
-  lastChecked = this;
-}
 
-checkBoxes.forEach(checkBox => checkBox.addEventListener("click", handleCheck));
+
 
 
 
