--- a/15 - LocalStorage/index-START.html
+++ b/15 - LocalStorage/index-START.html
@@ -26,13 +26,49 @@
   </div>
 
 <script>
+
+  //declare vairables
   const addItems = document.querySelector('.add-items');
   const itemsList = document.querySelector('.plates');
+    //saved record of all things inputted
   const items = [];
+
+  //create add item function
+  function addItem(e) {
+    e.preventDefault();
+    const text = (this.querySelector('[name=item]')).value;
+    const item = {
+      text,
+      done: false
+    }
+    items.push(item);
+    this.reset(); //refreshes fields
+    console.log(item);
+    populateList(items, itemsList);
+  }
+
+  //Create function for populating list
+
+  function populateList(plates = [], platesList) {
+
+    platesList.innerHTML = plates.map((plate, i) => {
+      return `
+
+      <li>
+      <input type="checkbox" data-index=${i} id="item${i}" ${plate.done ? 'checked' : ''}/>
+      <label for="item${i}">${plate.text} </label>
+      </li>
+      `;
+    }).join('');
+
+  }
+
+  //add event listener
+
+  addItems.addEventListener("submit", addItem);
 
 </script>
 
 
 </body>
 </html>
-
