--- a/15 - LocalStorage/index-START.html
+++ b/15 - LocalStorage/index-START.html
@@ -31,7 +31,7 @@
   const addItems = document.querySelector('.add-items');
   const itemsList = document.querySelector('.plates');
     //saved record of all things inputted
-  const items = [];
+  const items = JSON.parse(localStorage.getItem("items")) || [];
 
   //create add item function
   function addItem(e) {
@@ -45,6 +45,7 @@
     this.reset(); //refreshes fields
     console.log(item);
     populateList(items, itemsList);
+    localStorage.setItem("items", JSON.stringify(items));
   }
 
   //Create function for populating list
@@ -63,10 +64,20 @@
 
   }
 
+//Event delegation where the parent listens for the click on the child's behalf, then you write an if statement to only return the child input field (not the parent and child)
+  function toggleDone(e) {
+    if(!e.target.matches("input")) return; //skip this unless it is an input
+    const el = e.target;
+    const index = el.dataset.index;
+    items[index].done = !items[index].done;
+    localStorage.setItem("items", JSON.stringify(items));
+    populateList(items, itemsList);
+  }
   //add event listener
 
   addItems.addEventListener("submit", addItem);
-
+  itemsList.addEventListener("click", toggleDone);
+  populateList(items, itemsList);
 </script>
 
 
