--- a/15 - LocalStorage/index-FINISHED.html
+++ b/15 - LocalStorage/index-FINISHED.html
@@ -30,6 +30,7 @@
   const itemsList = document.querySelector('.plates');
   const items = JSON.parse(localStorage.getItem('items')) || [];
 
+
   function addItem(e) {
     e.preventDefault();
     const text = (this.querySelector('[name=item]')).value;
@@ -53,12 +54,14 @@
         </li>
       `;
     }).join('');
+
   }
 
-  function toggleDone(e) {
+  function toggleDone(e) { //Event delegation allows you to listen for a click on inputs as they come into existence
     if (!e.target.matches('input')) return; // skip this unless it's an input
     const el = e.target;
     const index = el.dataset.index;
+    console.log(index);
     items[index].done = !items[index].done;
     localStorage.setItem('items', JSON.stringify(items));
     populateList(items, itemsList);
@@ -67,11 +70,10 @@
   addItems.addEventListener('submit', addItem);
   itemsList.addEventListener('click', toggleDone);
 
-  populateList(items, itemsList);
+  populateList(items, itemsList); //So that the saved items are still displayed on page load
 
 </script>
 
 
 </body>
 </html>
-
