--- a/15 - LocalStorage/index-START.html
+++ b/15 - LocalStorage/index-START.html
@@ -26,58 +26,62 @@
   </div>
 
 <script>
+//Declare Variables
+const itemList = document.querySelector('.plates');
+const addItems = document.querySelector('.add-items');
+const items = JSON.parse(localStorage.getItem("items")) || [];
 
-  //declare vairables
-  const addItems = document.querySelector('.add-items');
-  const itemsList = document.querySelector('.plates');
-    //saved record of all things inputted
-  const items = JSON.parse(localStorage.getItem("items")) || [];
+//Create Functions to extract value inputted in form and add item to items array
 
-  //create add item function
-  function addItem(e) {
-    e.preventDefault();
-    const text = (this.querySelector('[name=item]')).value;
-    const item = {
-      text,
-      done: false
-    }
-    items.push(item);
-    this.reset(); //refreshes fields
-    console.log(item);
-    populateList(items, itemsList);
-    localStorage.setItem("items", JSON.stringify(items));
+function addText(e) {
+  e.preventDefault();
+  //extract value of inputted text
+  const text = addItems.querySelector('[name=item]').value;
+  //Store that text in an object
+  const newItem = {
+    text: text,
+    done: false
   }
 
-  //Create function for populating list
+  items.push(newItem);
+  this.reset();
+  displayItems(items, itemList)
+  localStorage.setItem('items', JSON.stringify(items));
+  //Call function to display items on the page
+}
 
-  function populateList(plates = [], platesList) {
-
-    platesList.innerHTML = plates.map((plate, i) => {
-      return `
-
+function displayItems(plates = [], plateList) {
+  plateList.innerHTML = plates.map((plate, i) => {
+    return `
       <li>
-      <input type="checkbox" data-index=${i} id="item${i}" ${plate.done ? 'checked' : ''}/>
-      <label for="item${i}">${plate.text} </label>
+        <input type="checkbox" data-index=${i} id="item${i}" ${plate.done ? 'checked' : ''} />
+        <label for="item${i}">${plate.text}</label>
       </li>
-      `;
-    }).join('');
+    `;
+  }).join('')
 
-  }
+}
 
-//Event delegation where the parent listens for the click on the child's behalf, then you write an if statement to only return the child input field (not the parent and child)
-  function toggleDone(e) {
-    if(!e.target.matches("input")) return; //skip this unless it is an input
-    const el = e.target;
-    const index = el.dataset.index;
-    items[index].done = !items[index].done;
-    localStorage.setItem("items", JSON.stringify(items));
-    populateList(items, itemsList);
-  }
-  //add event listener
+function toggleDone(e) {
+  if (!e.target.matches('input')) return; //Stop running the function
+  const el = e.target;
+  const index = el.dataset.index;
+  console.log(index);
+  console.log(e.target);
+  //change done: flase to done: true
+  items[index].done = !items[index].done;
+  localStorage.setItem("items", JSON.stringify(items));
+  displayItems(items, itemList);
+}
 
-  addItems.addEventListener("submit", addItem);
-  itemsList.addEventListener("click", toggleDone);
-  populateList(items, itemsList);
+
+//Add Event Listeners
+
+addItems.addEventListener("submit", addText);
+displayItems(items, itemList) //So that same items are displayed on page load
+itemList.addEventListener("click", toggleDone);
+
+
 </script>
 
 
