--- a/18 - Adding Up Times with Reduce/index-START.html
+++ b/18 - Adding Up Times with Reduce/index-START.html
@@ -206,17 +206,23 @@
   const timeNodes = Array.from(document.querySelectorAll('[data-time]'));
 
   const seconds = timeNodes
-  .map(node => node.dataset.time)
-  .map(timeCode => {
-    const [mins, secs] = timeCode.split(':')
-    .map(parseFloat);
-    return (mins * 60) + secs;
-  })
-  .reduce((total, seconds) => {
-    return total + seconds;
-  });
+    .map(node => node.dataset.time)
+    .map(timeCode => {
+      const [mins, secs] = timeCode.split(':').map(parseFloat);
+      return (mins * 60) + secs;
+    })
+    .reduce((total, vidSeconds) => total + vidSeconds);
 
-  console.log(total, videSeconds);
+    let secondsLeft = seconds;
+    const hours = Math.floor(secondsLeft / 3600);
+    secondsLeft = secondsLeft % 3600;
+
+    const mins = Math.floor(secondsLeft / 60);
+    secondsLeft = secondsLeft % 60;
+
+    console.log(hours, mins, secondsLeft);
+
+
 
 </script>
 </body>
