--- a/20 - Speech Detection/index-START.html
+++ b/20 - Speech Detection/index-START.html
@@ -1,60 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title>Speech Detection</title>
+    <meta charset="UTF-8">
+    <title>Speech Detection</title>
 </head>
+
 <body>
 
-  <div class="words" contenteditable>
-  </div>
+    <div class="words" contenteditable>
+    </div>
 
-<script>
-  window.SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
+    <script>
+        window.SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
+
+        const allYearsArr = [];
+
+        for (let j = 0; j <= 20; j++) {
+
+            const yearlyAmountInvested = (10000 + (j * 500));
+
+            const allYears = yearlyAmountInvested * Math.pow(1.08, (-1 * (j - 20)));
+
+            allYearsArr.push(allYears);
+        }
 
 
-</script>
+        const absoluteTotal = allYearsArr.reduce((total, eachYear) => {
+            return total + eachYear;
+        }, 0);
+
+        console.log(absoluteTotal);
+
+        const thirtyYearTotal = absoluteTotal * Math.pow(1.08, 10);
+        console.log(thirtyYearTotal);
+    </script>
 
 
-  <style>
-    html {
-      font-size: 10px;
-    }
+    <style>
+        html {
+            font-size: 10px;
+        }
 
-    body {
-      background:#ffc600;
-      font-family: 'helvetica neue';
-      font-weight: 200;
-      font-size: 20px;
-    }
+        body {
+            background: #ffc600;
+            font-family: 'helvetica neue';
+            font-weight: 200;
+            font-size: 20px;
+        }
 
-    .words {
-      max-width:500px;
-      margin:50px auto;
-      background:white;
-      border-radius:5px;
-      box-shadow:10px 10px 0 rgba(0,0,0,0.1);
-      padding:1rem 2rem 1rem 5rem;
-      background: -webkit-gradient(linear, 0 0, 0 100%, from(#d9eaf3), color-stop(4%, #fff)) 0 4px;
-      background-size: 100% 3rem;
-      position: relative;
-      line-height:3rem;
-    }
-    p {
-      margin: 0 0 3rem;
-    }
+        .words {
+            max-width: 500px;
+            margin: 50px auto;
+            background: white;
+            border-radius: 5px;
+            box-shadow: 10px 10px 0 rgba(0, 0, 0, 0.1);
+            padding: 1rem 2rem 1rem 5rem;
+            background: -webkit-gradient(linear, 0 0, 0 100%, from(#d9eaf3), color-stop(4%, #fff)) 0 4px;
+            background-size: 100% 3rem;
+            position: relative;
+            line-height: 3rem;
+        }
 
-    .words:before {
-      content: '';
-      position: absolute;
-      width: 4px;
-      top: 0;
-      left: 30px;
-      bottom: 0;
-      border: 1px solid;
-      border-color: transparent #efe4e4;
-    }
-  </style>
+        p {
+            margin: 0 0 3rem;
+        }
+
+        .words:before {
+            content: '';
+            position: absolute;
+            width: 4px;
+            top: 0;
+            left: 30px;
+            bottom: 0;
+            border: 1px solid;
+            border-color: transparent #efe4e4;
+        }
+    </style>
 
 </body>
+
 </html>
