--- a/22 - Follow Along Link Highlighter/index-START.html
+++ b/22 - Follow Along Link Highlighter/index-START.html
@@ -26,8 +26,25 @@
     </div>
 
   <script>
-    // 👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀
+    const triggers = document.querySelectorAll('a');
+    const highlight = document.createElement('span');
+    highlight.classList.add('highlight');
+    document.body.append(highlight);
+
+    function highlightLink() {
+      const linkCoords = this.getBoundingClientRect(); //getBoundingClientRect() will give the coordinates of the element and the width and height of the element
+
+      const highlightHeight = linkCoords.height;
+      const highlightWidth = linkCoords.width;
+
+      //Add width and height properties to highlight by using template strings
+
+      highlight.style.width = `${highlightWidth}px`;
+      highlight.style.height = `${highlightHeight}px`;
+      highlight.style.transform = `translate(${linkCoords.left + window.scrollX}px, ${linkCoords.top + window.scrollY}px)`;
+}
+
+    triggers.forEach(a => a.addEventListener("mouseenter", highlightLink));
   </script>
 </body>
 </html>
-
