--- a/26 - Stripe Follow Along Nav/index-START.html
+++ b/26 - Stripe Follow Along Nav/index-START.html
@@ -214,6 +214,42 @@
 </style>
 
 <script>
+
+const triggers = document.querySelectorAll('.cool > li');
+const background = document.querySelector('.dropdownBackground');
+const nav = document.querySelector('.top');
+
+
+function handleEnter() {
+  console.log("enter");
+  this.classList.add('trigger-enter');
+  setTimeout(() => this.classList.add('trigger-enter-active'), 150); //this is in inherited in arrow functions but not in regular functions
+  background.classList.add('open');
+
+  const dropdown = this.querySelector('.dropdown');
+  const dropdownCoord = dropdown.getBoundingClientRect();
+  const navCoords = nav.getBoundingClientRect();
+
+  const coords = {
+    height: dropdownCoord.height,
+    width: dropdownCoord.width
+  }
+
+  background.style.setProperty('width', `${coords.width}px`);
+  background.style.setProperty('height', `${coords.height}px`);
+}
+
+function handleLeave() {
+  console.log("leave");
+  this.classList.remove('trigger-enter');
+  setTimeout(() => this.classList.remove('trigger-enter-active'), 150);
+  background.classList.remove('open');
+}
+
+//Listen for hover over each list item
+
+triggers.forEach(trigger => trigger.addEventListener('mouseenter', handleEnter));
+triggers.forEach(trigger => trigger.addEventListener('mouseleave', handleLeave));
 </script>
 
 </body>
