--- a/27 - Click and Drag/index-START.html
+++ b/27 - Click and Drag/index-START.html
@@ -42,10 +42,30 @@ let isDown = false;
 let startX;
 let scrollLeft;
 
-slider.addEventListener('mousedown'
-slider.addEventListener('mouseleave'
-slider.addEventListener('mouseup'
-slider.addEventListener('mousemove'
+slider.addEventListener('mousedown', (e) => {
+ isDown = true;
+ slider.classList.add('active');
+ console.log(e.screenX);
+ startX = e.screenX - slider.offsetLeft;
+ scrollLeft = slider.scrollLeft;
+});
+slider.addEventListener('mouseleave', () => {
+  isDown = false;
+  slider.classList.remove('active');
+});
+slider.addEventListener('mouseup', () => {
+  isDown = false;
+  slider.classList.remove('active');
+});
+slider.addEventListener('mousemove', (e) => {
+  if (!isDown) return; //Stop function from running
+  e.preventDefault();
+
+  const x = e.pageX - slider.offsetLeft;
+  
+
+  slider.style.setproperty('transform', `translate${}`)
+});
 
 </script>
 
