--- a/28 - Video Speed Controller/index-START.html
+++ b/28 - Video Speed Controller/index-START.html
@@ -15,6 +15,24 @@
   </div>
 
 <script>
+
+const speed = document.querySelector('.speed');
+const bar = speed.querySelector('.speed-bar');
+const video = document.querySelector('.flex');
+
+speed.addEventListener('mousemove', function(e) {
+  const y = e.pageY - this.offsetTop;
+  const percent = (y / this.offsetHeight);
+  const min = 0.4;
+  const max = 4;
+  const height = Math.round(percent * 100) + '%';
+  bar.style.height = height;
+
+  const speedLabel = 0.4 + (percent * 3.6);
+  bar.textContent = parseFloat(speedLabel).toFixed(2) + 'x';
+  video.playbackRate = speedLabel;
+});
+
 </script>
 </body>
 </html>
