--- a/30 - Whack A Mole/index-START.html
+++ b/30 - Whack A Mole/index-START.html
@@ -36,7 +36,54 @@
   const holes = document.querySelectorAll('.hole');
   const scoreBoard = document.querySelector('.score');
   const moles = document.querySelectorAll('.mole');
+  let lastHole;
 
+  let timeUp = false;
+  let score = 0
+
+  function randomTime(min, max) {
+    return Math.round(Math.random() * (max - min) + min);
+  }
+
+  function randomHoles(holes) {
+    const idx = Math.floor(Math.rand() * holes.length);
+    const hole = holes[idx];
+
+    if (hole === lastHole) {
+      return randomHoles(holes);
+    }
+
+    lastHole = hole;
+    return hole
+
+  }
+
+  function peep() {
+    const time = randomTime(200, 2000);
+    const hole = randomHole(holes);
+    hole.classList.add('.up');
+    setTimeOut(() => {
+      hole.classList.remove('.up');
+      if (!timeUp) peep();
+    }, time);
+  }
+
+  function startGame() {
+    scoreBoard.textContent = 0;
+    score = 0
+    timeUp = false;
+    peep();
+    setTimeOut(() => timeUp = true, 10000);
+  }
+
+  function bonk(e) {
+    if (!e.isTrusted) return;
+    score++;
+    this.classList.remove('up');
+    scoreBoard.textContent = score;
+  }
+
+  moles.forEach(mole => mole.addEventListener('click', bonk));
 </script>
 </body>
 </html>
